k8s-basics/web-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-deployment
  namespace: calculator-server-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
        - name: web-server-container
          image: lfybbk10/web-server:latest
          ports:
            - containerPort: 8080
