k8s-basics/calculator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-server-service
  namespace: calculator-server-app
spec:
  selector:
    app: mp-calculator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
