k8s-basics/web-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
  namespace: calculator-server-app
spec:
  selector:
    app: web-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
