k8s-basics/calculator-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: calculator-dr
  namespace: calculator-server-app
spec:
  host: calculator-server-service
  subsets:
    - name: v1
      labels:
        version: v1.0
    - name: v2
      labels:
        version: v2.0
